Crash on mm_log_object_get_id
Related to #423 (closed).
This is a new stack trace -
Thread 0 (id: 0x00000902)
Exception infoSIGSEGV /0x00000000 @0x00000010
0x00005b3889e27c4a (ModemManager -mm-log-object.c:65) mm_log_object_get_id
0x00005b3889e27f24 (ModemManager -mm-log.c:256) _mm_log
0x00005b3889e090b4 (ModemManager -mm-broadband-modem-mbim.c:2358) mbim_device_removed_cb
0x00007b39a3ba1fdc (libgobject-2.0.so.0 -gclosure.c:873) _g_closure_invoke_va
0x00007b39a3bb56bb (libgobject-2.0.so.0 -gsignal.c:3406) g_signal_emit_valist
0x00007b39a3bb60ba (libgobject-2.0.so.0 -gsignal.c:3553) g_signal_emit
0x00007b39a3d2d85d (libmbim-glib.so.4 -mbim-device.c:1065) data_available
0x00007b39a3b3b536 (libglib-2.0.so.0 -gmain.c:3337) g_main_context_dispatch
0x00007b39a3b3b841 (libglib-2.0.so.0 -gmain.c:4131) g_main_context_iterate
0x00007b39a3b3babd (libglib-2.0.so.0 -gmain.c:4329) g_main_loop_run
0x00005b3889d9baf0 (ModemManager -main.c:216) main
0x00007b39a38dfe04 (libc.so.6 + 0x00022e04) __libc_start_main
0x00005b3889d9b909 (ModemManager + 0x00057909) _start
0x00007ffe6494d627
Edited by Aleksander Morgado