src/mm-broadband-modem-mbim.c
@@ -3225,57 +3225,6 @@ query_device_services (GTask *task)
 }
 
 static void
-mbim_device_removed_cb (MbimDevice           *device,
-                        MMBroadbandModemMbim *self)
-{
-    /* We have to do a full re-probe here because simply reopening the device
-     * and restarting mbim-proxy will leave us without MBIM notifications. */
-    mm_obj_msg (self, "connection to mbim-proxy for %s lost, reprobing",
-                mbim_device_get_path_display (device));
-
-    g_signal_handler_disconnect (device,
-                                 self->priv->mbim_device_removed_id);
-    self->priv->mbim_device_removed_id = 0;
-
-    mm_base_modem_set_reprobe (MM_BASE_MODEM (self), TRUE);
-    mm_base_modem_set_valid (MM_BASE_MODEM (self), FALSE);
-}
-
-static void
-track_mbim_device_removed (MMBroadbandModemMbim *self,
-                           MMPortMbim           *mbim)
-{
-    MbimDevice *device;
-
-    device = mm_port_mbim_peek_device (mbim);
-    g_assert (device);
-
-    /* Register removal handler so we can handle mbim-proxy crashes */
-    self->priv->mbim_device_removed_id = g_signal_connect (
-        device,
-        MBIM_DEVICE_SIGNAL_REMOVED,
-        G_CALLBACK (mbim_device_removed_cb),
-        self);
-}
-
-static void
-untrack_mbim_device_removed (MMBroadbandModemMbim *self,
-                             MMPortMbim           *mbim)
-{
-    MbimDevice *device;
-
-    if (self->priv->mbim_device_removed_id == 0)
-        return;
-
-    device = mm_port_mbim_peek_device (mbim);
-    if (!device)
-        return;
-
-    g_signal_handler_disconnect (device, self->priv->mbim_device_removed_id);
-    self->priv->mbim_device_removed_id = 0;
-}
-
-static void
 mbim_port_open_ready (MMPortMbim   *mbim,
                       GAsyncResult *res,
                       GTask        *task)
@@ -3288,9 +3237,6 @@ mbim_port_open_ready (MMPortMbim   *mbim,
         return;
     }
 
-    /* Make sure we know if mbim-proxy dies on us, and then do the parent's
-     * initialization */
-    track_mbim_device_removed (MM_BROADBAND_MODEM_MBIM (g_task_get_source_object (task)), mbim);
     query_device_services (task);
 }
 
@@ -3383,7 +3329,6 @@ initialization_started (MMBroadbandModem    *self,
     if (mm_port_mbim_is_open (ctx->mbim)) {
         /* Nothing to be done, just connect to a signal and launch parent's
          * callback */
-        track_mbim_device_removed (MM_BROADBAND_MODEM_MBIM (self), ctx->mbim);
         query_device_services (task);
         return;
     }
@@ -9230,8 +9175,7 @@ dispose (GObject *object)
         /* Explicitly remove notification handler */
         self->priv->setup_flags = PROCESS_NOTIFICATION_FLAG_NONE;
         common_setup_cleanup_unsolicited_events_sync (self, mm_port_mbim_peek_device (mbim), FALSE);
-        /* Disconnect signal handler for mbim-proxy disappearing, if it exists */
-        untrack_mbim_device_removed (self, mbim);
+
         /* If we did open the MBIM port during initialization, close it now */
         if (mm_port_mbim_is_open (mbim))
             mm_port_mbim_close (mbim, NULL, NULL);
